--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nodemon": "^2.0.22",
     "npm": "^10.2.4",
     "os-browserify": "^0.3.0",
+    "papaparse": "^5.5.3",
     "pareto-chart": "^1.0.22",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
