--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.5.0",
     "react-google-charts": "^4.0.1",
     "react-hooks": "^1.0.1",
     "react-icons": "^5.5.0",
